Coding cleanup and style normalization

--- a/client/templates/addMeetingForm.html
+++ b/client/templates/addMeetingForm.html
@@ -19,6 +19,12 @@
 				<li id="{{id}}">{{name}}</li>
 				{{/each}}
 			</ul>
+			<p>Participants</p>
+			<ul>
+				{{#each participants}}
+				<li>{{.}}</li>
+				{{/each}}
+			</ul>
 		</div>
 
 		<div class="input-group">
