--- a/client/templates/addfriend.html
+++ b/client/templates/addfriend.html
@@ -1,4 +1,5 @@
 <template name="addFriendMethods">
+	<!-- if NFC-> nfc template else if QRCode-> qr code template else email -->
 	{{#if NFC}}
 		NFC:
 		{{> byNFC}}
@@ -6,25 +7,31 @@
 		{{#if QRCode}}
 			QRCode:
 			{{> byQRCode}}
-		{{else}}
-		<!-- email-->
+	<!--	{{else}}
 			{{#if Email}}
 				Email:
 				{{> byEmail}}
-			{{/if}}
+			{{/if}}-->
 		{{/if}}
 	{{/if}}
 </template>	
 
 <template name="byNFC">
 	<div id="addByNFC">
-		<div class="row" align="middle"><h2>Give me Five!!!</h2></div>
-		<div class="row"><img src="/images/nfc/NFC_icon.png" class="img-responsive nfc_icon" style="max-height:300px;"></div>
+		<div class="row" align="middle">
+			<h2>Give me Five!!!</h2>
+		</div>
+
+		<div class="row">
+			<img src="/images/nfc/NFC_icon.png" class="img-responsive nfc_icon" style="max-height:300px;">
+		</div>
 	</div>
 </template>
 
 <template name="byQRCode">
-	<div class="row" align="middle"> <img src="{{QRURL}}" style="max-height:300px;"> </div>
+	<div class="row" align="middle">
+		<img src="{{QrCodeUrl}}" style="max-height:300px;">
+	</div>
 </template>	
 
 <template name="byEmail">
@@ -40,15 +47,14 @@
 </template>
 
 <template name="addfriend">
-<!-- content -->
+	<!-- content -->
 	<div class="container">
 		<ul class="nav nav-tabs">
 			{{> list_nav}}
 		</ul>
 		{{> addFriendMethods}}
 		<button type="button" id="addByNfc" class="btn btn-default btn-lg btn-block">NFC</button>
-		<button type="button" id="addByQr" class="btn btn-default btn-lg btn-block">QR code?</button>
-		<button type="button" id="addByMail" class="btn btn-default btn-lg btn-block">Want to use Email?</button>
+		<button type="button" id="addByQr" class="btn btn-default btn-lg btn-block">QR code</button>
+		<!--<button type="button" id="addByMail" class="btn btn-default btn-lg btn-block">Want to use Email?</button>-->
 	</div> 
-
 </template>
