Fixed incorrect helper name QrCodeUrl

--- a/client/templates/addfriend.html
+++ b/client/templates/addfriend.html
@@ -30,7 +30,7 @@
 
 <template name="byQRCode">
 	<div class="row" align="middle">
-		<img src="{{QrCodeUrl}}" style="max-height:300px;">
+		<img src="{{QRCodeUrl}}" style="max-height:300px;">
 	</div>
 </template>	
 
